--- a/css/style.css
+++ b/css/style.css
@@ -619,6 +619,16 @@ select {
     outline: none;
 }
 
+input[type=number] {
+    padding: 1em;
+    margin: 1em 1em 1em 0;
+}
+
+#users-container {
+    display: flex;
+    flex-direction: column;
+}
+
 #users-container hr {
     margin: 1em 0 1em 0;
 }
@@ -734,6 +744,20 @@ form:has(#name) > input[type=submit] {
     gap: 1em;
     border: 1px solid #000;
     padding: 1em;
+}
+
+.score-add {
+    margin: 1em 0 1em 0;
+}
+
+#class-selector, #class-selector-submit {
+    margin: 1em 0 1em 0;
+    border-radius: 0;
+}
+
+.score-add > input[type=submit] {
+    border-radius: 0;
+    margin-left: 1em;
 }
 
 @media only screen and (min-width: 800px) {
